# wordpress-mcp

./: .gitignore  README.md  pyproject.toml  run-server.sh
src/wordpress_mcp/: __init__.py  client.py  config.py  server.py
