[project]
name = "wordpress-mcp"
version = "0.1.0"
description = "MCP server to connect AI assistants (Claude Code, Cursor) to WordPress sites via REST API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Paul", email = "paul@scrapeelabs.com"}
]
keywords = [
    "mcp",
    "wordpress",
    "ai",
    "claude",
    "cursor",
    "rest-api",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/gaupoit/wordpress-mcp"
Documentation = "https://github.com/gaupoit/wordpress-mcp#readme"
Repository = "https://github.com/gaupoit/wordpress-mcp.git"
Issues = "https://github.com/gaupoit/wordpress-mcp/issues"

[project.scripts]
wordpress-mcp = "wordpress_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordpress_mcp"]
